update basic layout css and content

--- a/app/narrow-jumbotron.css
+++ b/app/narrow-jumbotron.css
@@ -8,8 +8,8 @@ body {
 .header,
 .marketing,
 .footer {
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: .5rem;
+  padding-left: .5rem;
 }
 
 /* Custom page header */
