--- a/app/app.css
+++ b/app/app.css
@@ -1,1 +1,29 @@
 /* app css stylesheet */
+
+.statusBody {
+  min-height: 70px;
+  margin-bottom: 10px;
+  border-bottom: dashed 1px #cc0000;
+}
+.statusImage {
+  float: left;
+  height: 50px;
+  width: 50px;
+  border: solid 1px #dedede;
+  padding: 5px;
+}
+.statusText {
+  margin-left: 70px;
+  min-height: 50px;
+  word-wrap: break-word;
+  overflow: hidden;
+  padding: 5px;
+  display: block;
+  font-family: 'Georgia', 'Times New Roman', 'serif';
+}
+.statusTime {
+  font-size: 11px;
+  color: #999;
+  margin-top: 5px;
+  font-family: 'Arial', 'Helvetica', 'sans-serif'
+}
